
@startuml
class Usuario {
   
    + string Nome
    + string Email
    + string Senha
    + List<Avaliacao> Avaliacoes
    --
    + Cadastrar()
    + Logar()
}

class Avaliacao {
    + Usuario Usuario
    + Dorama Dorama
    + int Nota
    + String Comentario
    + DateTime DataAvaliacao
    --
    + CriarAvaliacao()
    + EditarAvaliacao()
    + ExcluirAvaliacao()
}

class Dorama {
    + string Titulo
    + string Descricao
    + int QtdEpisodios
    + DateTime DataLancamento
    + List<Genero> Generos
    + List<Avaliacao> Avaliacoes
    
    --
    + ListarEpisodios()
}
class Genero {
    
    + string Nome
}

Usuario "1" -- "0..*" Avaliacao : "realiza"
Dorama "1" -- "0..*" Avaliacao : "é avaliado em"
Dorama "*" -- "*" Genero : "se enquadra em"



@enduml